Switch to yaml, 0.2.0

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ window.onload = function() {
 
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "swagger/data_objects_service.swagger.json",
+    url: "swagger/data_object_service.swagger.yaml",
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
